@@ -14,27 +14,6 @@
 //
 //--------------------------------------------------------------------------
 
-#include <stdlib.h> /* malloc(3) */
-#include <string.h>
-#include <assert.h>
-
 #include "gDynamic.h"
-#include "gPreCalc.h"
-#include "log.h"
 
 GDynamicT gVars;
-
-void gHistInit(void)
-{
-    int i, j, k;
-
-    /* reset history table. */
-    for (i = 0; i < NUM_PLAYERS; i++)
-        for (j = 0; j < NUM_SQUARES; j++)
-            for (k = 0; k < NUM_SQUARES; k++)
-            {
-                /* -50, not -1, because -1 might trigger accidentally if
-                   we expand the history window beyond killer moves. */
-                gVars.hist[i] [j] [k] = -50;
-            }
-}
